--- a/index.html
+++ b/index.html
@@ -71,15 +71,20 @@
         </div>
         <div class="text-black text-center pt-8 text-xl font-semibold md:text-[30px] lg:text-[35px] xl:text-[38px]">
             <h2 class="">About Me</h2>
-            <p class="font-normal pt-2 text-[9px] md:text-[12px] lg:text-[18px] xl:text-[24px] text-[#717171]">“Saya
-                Lusia
-                Letisia Maria Kaparang , mahasiswa aktif fakultas Teknik<br>
-                dengan program studi Teknik informatika, saat ini tengah <br> menempu semester 5.
-                Dengan masuk ke-dalam program studi ini<br> tentu saja memberikan gambaran mengenai ketertarikan
-                saya<br>
-                terhadap dunia teknologi informasi. Pada beberapa waktu saya<br> berkesempatan menyelesaikan beberapa
-                project dengan topik berkaitan.<br> Tentu saja tidak lepas dari kerja sama tim
-                yang dilandasi ambisi<br> untuk mendapat pengalaman juga nilai yang memuaskan.”</p>
+            <p class="font-light mt-4 text-[7px] md:text-[14px] lg:text-[18px] xl:text-[24px] text-[#717171]">“I am
+                Lusia Letisia Maria Kaparang,
+                i am currently studiying as a informatics <br>
+                engineering student at De La Salle University of Manado
+                Entering this faculty means that i have <br>
+                such a big interest of computing, technology, design and any other related stuffs.<br>
+                At sometime I had the opportunity to complete several projects with related topics.<br>”
+                Of course, it cannot be separated from teamwork based on an ambition<br>
+                to get experience as well as satisfactory value.<br>
+                Not only focused on the academy, but I also have the opportunity to participate<br>
+                in several activities like choir, student organization,etc. <br>
+                By joining those activities it gives me chance to build good <br>
+                relationships with others and also opens up
+                up the widest experience of socializing."</p>
         </div>
         <div class="text-black text-center pt-8 text-xl font-semibold md:text-[30px] lg:text-[35px] xl:text-[38px]">
             <h2 class="">Software experience</h2>
@@ -178,6 +183,42 @@
                     <div class="lg:mr-14 xl:mr-0">
                         <h3 class="text-center">
                             Member of PSM (Paduan Suara Mahasiswa) Catholic University of De La Salle Manado </h3>
+                    </div>
+                </div>
+            </div>
+            <div class="text-black md:mx-6">
+                <h3
+                    class="text-left my-8 text-xl font-semibold md:text-[30px] lg:text-[35px] lg:pl-12 xl:text-[38px] xl:mt-28 xl:mb-14">
+                    Education</h3>
+                <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4 gap-2 place-items-center">
+                    <div class="relative">
+                        <img src="./src/assets/img/sd.svg" alt="" class="rounded-xl">
+                        <div class="flex items-center space-x-2 absolute top-3 left-2">
+                            <img src="./src/assets/img/Star full.svg" alt="">
+                            <p class="text-black font-bold text-[12px] md:text-[14px]">
+                                "2008-2014"</p>
+                        </div>
+                    </div>
+                    <div class="relative">
+                        <img src="./src/assets/img/smp.svg" alt="" class="rounded-xl">
+                        <div class="flex items-center space-x-2 absolute top-3 left-2">
+                            <img src="./src/assets/img/Star full.svg" alt="">
+                            <p class="text-black font-bold text-[12px] md:text-[14px]">"2014-2017"</p>
+                        </div>
+                    </div>
+                    <div class="relative">
+                        <img src="./src/assets/img/sma.svg" alt="" class="rounded-xl">
+                        <div class="flex items-center space-x-2 absolute top-3 left-2">
+                            <img src="./src/assets/img/Star full.svg" alt="">
+                            <p class="text-black font-bold text-[12px] md:text-[14px]">"2017-2020"</p>
+                        </div>
+                    </div>
+                    <div class="relative">
+                        <img src="./src/assets/img/de la.svg" alt="" class="rounded-xl">
+                        <div class="flex items-center space-x-2 absolute top-3 left-2">
+                            <img src="./src/assets/img/Star full.svg" alt="">
+                            <p class="text-black font-bold text-[12px] md:text-[14px]">"2020-on going"</p>
+                        </div>
                     </div>
                 </div>
             </div>
